force-app/main/default/objects/PlanningEvent__c/PlanningEvent__c.object-meta.xml
<CustomObject>
    <description>Evenement de planning sportif (entrainement, match, stage, deplacement).</description>
    <label>Planning Event</label>
    <nameField>
        <label>Planning Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planning Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>