force-app/main/default/objects/PlanningEvent__c/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <label>Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Training</fullName>
                <default>true</default>
                <label>Training</label>
            </value>
            <value>
                <fullName>Match</fullName>
            </value>
            <value>
                <fullName>Camp</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>