force-app/main/default/objects/PlanningEvent__c/fields/Squad__c.field-meta.xml
<CustomField>
    <fullName>Squad__c</fullName>
    <label>Squad</label>
    <referenceTo>Squad__c</referenceTo>
    <relationshipLabel>Planning Events</relationshipLabel>
    <relationshipName>PlanningEvents</relationshipName>
    <type>Lookup</type>
</CustomField>