force-app/main/default/objects/PlanningEvent__c/validationRules/EndAfterStart.validationRule-meta.xml
<ValidationRule>
    <fullName>EndAfterStart</fullName>
    <active>true</active>
    <description>Empêche une fin d'evenement avant le debut.</description>
    <errorConditionFormula>EndDateTime__c &lt;= StartDateTime__c</errorConditionFormula>
    <errorDisplayField>EndDateTime__c</errorDisplayField>
    <errorMessage>End Date Time must be greater than Start Date Time.</errorMessage>
</ValidationRule>